--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: suzi_app
 description: "SUZI"
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.5 <4.0.0'
+  sdk: ">=3.2.5 <4.0.0"
 
 dependencies:
   flutter:
@@ -17,6 +17,9 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   google_sign_in: ^6.2.1
   validators: ^3.0.0
+  http: ^1.2.0
+  rive: ^0.12.4
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +37,7 @@ flutter:
     - assets/illustrations/illustration2.png
     - assets/illustrations/illustration3.png
     - assets/illustrations/button.png
+    - assets/rive/blob.riv
 
   fonts:
     - family: Technor
