--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   rive: ^0.12.4
   loading_animation_widget: ^1.2.0+4
   geolocator: ^10.1.0
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
