feat: embedded kotlin heatmap view in flutter!!! LLFFFGGGGG!!!!
Co-authored-by: adi <fauxriarty@users.noreply.github.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   geolocator: ^10.1.0
   flutter_animate: ^4.5.0
+  webview_flutter: ^4.5.0
+  android_intent_plus: ^4.0.3
 
 dev_dependencies:
   flutter_test:
