--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_animate: ^4.5.0
   webview_flutter: ^4.5.0
   android_intent_plus: ^4.0.3
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,7 @@ flutter:
     - assets/icons/nav2.png
     - assets/icons/nav1s.png
     - assets/icons/nav2s.png
+    - .env
 
   fonts:
     - family: Technor
