--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   webview_flutter: ^4.5.0
   android_intent_plus: ^4.0.3
   flutter_dotenv: ^5.1.0
+  flutter_native_splash: ^2.3.10
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +36,7 @@ dev_dependencies:
   riverpod_lint: ^2.3.7
   custom_lint: ^0.5.8
   build_runner: ^2.4.8
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
@@ -52,6 +55,7 @@ flutter:
     - assets/icons/nav1s.png
     - assets/icons/nav2s.png
     - .env
+    - assets/icons/appicon.png
 
   fonts:
     - family: Technor
@@ -76,3 +80,17 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/appicon.png"
+  min_sdk_android: 21
+  adaptive_icon_background: #FF4200
+
+flutter_native_splash:
+  background_image: "assets/splash.png"
+  android_12:
+    image: assets/icons/appicon12.png
+    color: "#FF4200"
+    icon_background_color: "#FF4200"
